I added all the missing functionalities

--- a/app/src/main/res/layout/fragment_detail_pokemon.xml
+++ b/app/src/main/res/layout/fragment_detail_pokemon.xml
@@ -29,7 +29,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="gone">
 
             <ImageView
                 android:id="@+id/imageView6"
@@ -66,7 +67,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:visibility="gone">
+            tools:visibility="visible">
 
 
             <TextView
@@ -447,6 +448,7 @@
                         android:layout_marginTop="@dimen/_20sdp"
                         android:layout_marginEnd="@dimen/_5sdp"
                         android:background="@color/primary_gray"
+                        android:visibility="@{pokemon.hp !=null ? View.VISIBLE : View.GONE}"
                         app:layout_constraintBottom_toBottomOf="@+id/text_stats"
                         app:layout_constraintEnd_toStartOf="@+id/text_stats"
                         app:layout_constraintStart_toStartOf="parent"
@@ -461,6 +463,7 @@
                         android:gravity="center"
                         android:padding="@dimen/_14sdp"
                         android:text='@string/pokemon_subtitle_stats'
+                        android:visibility="@{pokemon.hp !=null ? View.VISIBLE : View.GONE}"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/text_description_hability"
@@ -475,6 +478,7 @@
                         android:layout_marginTop="@dimen/_20sdp"
                         android:layout_marginEnd="@dimen/_5sdp"
                         android:background="@color/primary_gray"
+                        android:visibility="@{pokemon.hp !=null ? View.VISIBLE : View.GONE}"
                         app:layout_constraintBottom_toBottomOf="@+id/text_stats"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/text_stats"
@@ -490,6 +494,7 @@
                         android:lines="1"
                         android:padding="@dimen/_5sdp"
                         android:text="@string/pokemon_title_stats_hp"
+                        android:visibility="@{pokemon.hp !=null ? View.VISIBLE : View.GONE}"
                         app:layout_constraintEnd_toStartOf="@+id/guideline_33_v"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/text_stats"
@@ -505,6 +510,7 @@
                         android:padding="0dp"
                         android:text="@{@string/textview_custom_param(pokemon.hp)}"
                         android:textStyle="bold"
+                        android:visibility="@{pokemon.hp !=null ? View.VISIBLE : View.GONE}"
                         app:layout_constraintBottom_toBottomOf="@+id/textView4"
                         app:layout_constraintStart_toStartOf="@+id/guideline_33_v"
                         app:layout_constraintTop_toTopOf="@+id/textView4"
@@ -519,6 +525,7 @@
                         android:progress="@{pokemon.hp}"
                         android:progressBackgroundTint="@color/primary_gray"
                         android:progressTint="@color/primary_yellow"
+                        android:visibility="@{pokemon.hp !=null ? View.VISIBLE : View.GONE}"
                         app:layout_constraintBottom_toBottomOf="@+id/textView4"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/textView5"
@@ -533,6 +540,7 @@
                         android:lines="1"
                         android:padding="@dimen/_5sdp"
                         android:text="@string/pokemon_title_stats_attack"
+                        android:visibility="@{pokemon.hp !=null ? View.VISIBLE : View.GONE}"
                         app:layout_constraintEnd_toStartOf="@+id/guideline_33_v"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView4"
@@ -547,6 +555,7 @@
                         android:lines="1"
                         android:padding="0dp"
                         android:text="@{@string/textview_custom_param(pokemon.attack)}"
+                        android:visibility="@{pokemon.hp !=null ? View.VISIBLE : View.GONE}"
                         app:layout_constraintBottom_toBottomOf="@+id/textView7"
                         app:layout_constraintStart_toStartOf="@+id/guideline_33_v"
                         app:layout_constraintTop_toBottomOf="@+id/textView4"
@@ -562,6 +571,7 @@
                         android:progress="@{pokemon.attack}"
                         android:progressBackgroundTint="@color/primary_gray"
                         android:progressTint="@color/primary_yellow"
+                        android:visibility="@{pokemon.hp !=null ? View.VISIBLE : View.GONE}"
                         app:layout_constraintBottom_toBottomOf="@+id/textView7"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/textView5"
@@ -577,6 +587,7 @@
                         android:lines="1"
                         android:padding="@dimen/_5sdp"
                         android:text="@string/pokemon_title_stats_defence"
+                        android:visibility="@{pokemon.hp !=null ? View.VISIBLE : View.GONE}"
                         app:layout_constraintEnd_toStartOf="@+id/guideline_33_v"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView7"
@@ -591,6 +602,7 @@
                         android:padding="0dp"
                         android:text="@{@string/textview_custom_param(pokemon.defence)}"
                         android:textStyle="bold"
+                        android:visibility="@{pokemon.hp !=null ? View.VISIBLE : View.GONE}"
                         app:layout_constraintBottom_toBottomOf="@+id/textView8"
                         app:layout_constraintStart_toStartOf="@+id/guideline_33_v"
                         app:layout_constraintTop_toBottomOf="@+id/textView7"
@@ -606,6 +618,7 @@
                         android:progress="@{pokemon.defence}"
                         android:progressBackgroundTint="@color/primary_gray"
                         android:progressTint="@color/primary_yellow"
+                        android:visibility="@{pokemon.hp !=null ? View.VISIBLE : View.GONE}"
                         app:layout_constraintBottom_toBottomOf="@+id/textView8"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/textView5"
@@ -621,6 +634,7 @@
                         android:lines="1"
                         android:padding="@dimen/_5sdp"
                         android:text="@string/pokemon_title_special_attack"
+                        android:visibility="@{pokemon.hp !=null ? View.VISIBLE : View.GONE}"
                         app:layout_constraintEnd_toStartOf="@+id/guideline_33_v"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView8"
@@ -635,6 +649,7 @@
                         android:padding="0dp"
                         android:text="@{@string/textview_custom_param(pokemon.attack_special)}"
                         android:textStyle="bold"
+                        android:visibility="@{pokemon.hp !=null ? View.VISIBLE : View.GONE}"
                         app:layout_constraintBottom_toBottomOf="@+id/textView9"
                         app:layout_constraintStart_toStartOf="@+id/guideline_33_v"
                         app:layout_constraintTop_toBottomOf="@+id/textView8"
@@ -649,6 +664,7 @@
                         android:progress="@{pokemon.attack_special}"
                         android:progressBackgroundTint="@color/primary_gray"
                         android:progressTint="@color/primary_yellow"
+                        android:visibility="@{pokemon.hp !=null ? View.VISIBLE : View.GONE}"
                         app:layout_constraintBottom_toBottomOf="@+id/textView9"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/textView5"
@@ -664,6 +680,7 @@
                         android:lines="1"
                         android:padding="@dimen/_5sdp"
                         android:text="@string/pokemon_title_special_defence"
+                        android:visibility="@{pokemon.hp !=null ? View.VISIBLE : View.GONE}"
                         app:layout_constraintEnd_toStartOf="@+id/guideline_33_v"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView9"
@@ -678,6 +695,7 @@
                         android:padding="0dp"
                         android:text="@{@string/textview_custom_param(pokemon.defence_special)}"
                         android:textStyle="bold"
+                        android:visibility="@{pokemon.hp !=null ? View.VISIBLE : View.GONE}"
                         app:layout_constraintBottom_toBottomOf="@+id/textView10"
                         app:layout_constraintStart_toStartOf="@+id/guideline_33_v"
                         app:layout_constraintTop_toBottomOf="@+id/textView9"
@@ -692,6 +710,7 @@
                         android:progress="@{pokemon.defence_special}"
                         android:progressBackgroundTint="@color/primary_gray"
                         android:progressTint="@color/primary_yellow"
+                        android:visibility="@{pokemon.hp !=null ? View.VISIBLE : View.GONE}"
                         app:layout_constraintBottom_toBottomOf="@+id/textView10"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/textView5"
@@ -707,6 +726,7 @@
                         android:lines="1"
                         android:padding="@dimen/_5sdp"
                         android:text="@string/pokemon_title_speed"
+                        android:visibility="@{pokemon.hp !=null ? View.VISIBLE : View.GONE}"
                         app:layout_constraintEnd_toStartOf="@+id/guideline_33_v"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView10"
@@ -721,6 +741,7 @@
                         android:padding="0dp"
                         android:text="@{@string/textview_custom_param(pokemon.speed)}"
                         android:textStyle="bold"
+                        android:visibility="@{pokemon.hp !=null ? View.VISIBLE : View.GONE}"
                         app:layout_constraintBottom_toBottomOf="@+id/textView11"
                         app:layout_constraintStart_toStartOf="@+id/guideline_33_v"
                         app:layout_constraintTop_toBottomOf="@+id/textView10"
@@ -735,6 +756,7 @@
                         android:progress="@{pokemon.speed}"
                         android:progressBackgroundTint="@color/primary_gray"
                         android:progressTint="@color/primary_yellow"
+                        android:visibility="@{pokemon.hp !=null ? View.VISIBLE : View.GONE}"
                         app:layout_constraintBottom_toBottomOf="@+id/textView11"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/textView5"
@@ -750,6 +772,7 @@
                         android:lines="1"
                         android:padding="@dimen/_5sdp"
                         android:text="@string/pokemon_title_total"
+                        android:visibility="@{pokemon.hp !=null ? View.VISIBLE : View.GONE}"
                         app:layout_constraintEnd_toStartOf="@+id/guideline_33_v"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView11"
@@ -764,6 +787,7 @@
                         android:padding="0dp"
                         android:text="@{@string/textview_custom_param(pokemon.total)}"
                         android:textStyle="bold"
+                        android:visibility="@{pokemon.hp !=null ? View.VISIBLE : View.GONE}"
                         app:layout_constraintBottom_toBottomOf="@+id/textView12"
                         app:layout_constraintStart_toStartOf="@+id/guideline_33_v"
                         app:layout_constraintTop_toBottomOf="@+id/textView11"
@@ -778,6 +802,7 @@
                         android:progress="@{pokemon.total}"
                         android:progressBackgroundTint="@color/primary_gray"
                         android:progressTint="@color/primary_red"
+                        android:visibility="@{pokemon.hp !=null ? View.VISIBLE : View.GONE}"
                         app:layout_constraintBottom_toBottomOf="@+id/textView12"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/textView5"
@@ -1069,6 +1094,7 @@
                         android:layout_marginStart="@dimen/_5sdp"
                         android:layout_marginEnd="@dimen/_5sdp"
                         android:background="@color/primary_gray"
+                        android:visibility="@{pokemon.interestingData !=null ? View.VISIBLE : View.GONE}"
                         app:layout_constraintBottom_toBottomOf="@+id/text_random_data"
                         app:layout_constraintEnd_toStartOf="@+id/text_random_data"
                         app:layout_constraintStart_toStartOf="parent"
@@ -1082,6 +1108,7 @@
                         android:gravity="center"
                         android:padding="@dimen/_14sdp"
                         android:text='@string/pokemon_subtitle_interesting_data'
+                        android:visibility="@{pokemon.interestingData !=null ? View.VISIBLE : View.GONE}"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/textView19"
@@ -1094,6 +1121,7 @@
                         android:layout_marginStart="@dimen/_5sdp"
                         android:layout_marginEnd="@dimen/_5sdp"
                         android:background="@color/primary_gray"
+                        android:visibility="@{pokemon.interestingData !=null ? View.VISIBLE : View.GONE}"
                         app:layout_constraintBottom_toBottomOf="@+id/text_random_data"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/text_random_data"
@@ -1107,6 +1135,7 @@
                         android:layout_marginTop="@dimen/_20sdp"
                         android:padding="@dimen/_14sdp"
                         android:text='@{pokemon.interestingData}'
+                        android:visibility="@{pokemon.interestingData !=null ? View.VISIBLE : View.GONE}"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/text_random_data"
@@ -1117,6 +1146,21 @@
             </ScrollView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabOpenTableTypes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:layout_margin="@dimen/_32sdp"
+            android:contentDescription="@string/app_name"
+            android:elevation="8dp"
+            android:visibility="gone"
+            android:src="@drawable/ic_table_type"
+            app:backgroundTint="@color/primary_red"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:tint="@color/white" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
