--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,7 +19,7 @@
 
 
         <TextView
-            android:id="@+id/text_pokemon_name"
+            android:id="@+id/textPokemonName"
             style="@style/TextViewTitleBold"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -32,17 +32,17 @@
         <View
             android:id="@+id/view"
             android:layout_width="0dp"
-            android:layout_height="2dp"
+            android:layout_height="@dimen/_2sdp"
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginEnd="@dimen/_5sdp"
             android:background="@color/primary_gray"
-            app:layout_constraintBottom_toBottomOf="@+id/text_subtitle_category"
-            app:layout_constraintEnd_toStartOf="@+id/text_subtitle_category"
+            app:layout_constraintBottom_toBottomOf="@+id/textSubtitleCategory"
+            app:layout_constraintEnd_toStartOf="@+id/textSubtitleCategory"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name" />
+            app:layout_constraintTop_toBottomOf="@+id/textPokemonName" />
 
         <TextView
-            android:id="@+id/text_subtitle_category"
+            android:id="@+id/textSubtitleCategory"
             style="@style/TextViewTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -51,19 +51,19 @@
             android:text="@string/textview_recent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name" />
+            app:layout_constraintTop_toBottomOf="@+id/textPokemonName" />
 
 
         <View
             android:layout_width="0dp"
-            android:layout_height="2dp"
+            android:layout_height="@dimen/_2sdp"
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginEnd="@dimen/_5sdp"
             android:background="@color/primary_gray"
-            app:layout_constraintBottom_toBottomOf="@+id/text_subtitle_category"
+            app:layout_constraintBottom_toBottomOf="@+id/textSubtitleCategory"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/text_subtitle_category"
-            app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name" />
+            app:layout_constraintStart_toEndOf="@+id/textSubtitleCategory"
+            app:layout_constraintTop_toBottomOf="@+id/textPokemonName" />
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipe"
@@ -72,7 +72,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_subtitle_category"
+            app:layout_constraintTop_toBottomOf="@+id/textSubtitleCategory"
             app:onRefreshListener="@{() -> viewModel.getNews()}"
             app:refreshing="@{viewModel.isLoading}">
 
