--- a/app/src/main/res/layout/fragment_table_type.xml
+++ b/app/src/main/res/layout/fragment_table_type.xml
@@ -30,17 +30,17 @@
         <View
 
             android:layout_width="0dp"
-            android:layout_height="2dp"
+            android:layout_height="@dimen/_2sdp"
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginEnd="@dimen/_5sdp"
             android:background="@color/primary_gray"
-            app:layout_constraintBottom_toBottomOf="@+id/text_subtitle_category"
-            app:layout_constraintEnd_toStartOf="@+id/text_subtitle_category"
+            app:layout_constraintBottom_toBottomOf="@+id/textSubtitleCategory"
+            app:layout_constraintEnd_toStartOf="@+id/textSubtitleCategory"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/text_subtitle_category" />
+            app:layout_constraintTop_toTopOf="@+id/textSubtitleCategory" />
 
         <TextView
-            android:id="@+id/text_subtitle_category"
+            android:id="@+id/textSubtitleCategory"
             style="@style/TextViewTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -55,14 +55,14 @@
 
         <View
             android:layout_width="0dp"
-            android:layout_height="2dp"
+            android:layout_height="@dimen/_2sdp"
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginEnd="@dimen/_5sdp"
             android:background="@color/primary_gray"
-            app:layout_constraintBottom_toBottomOf="@+id/text_subtitle_category"
+            app:layout_constraintBottom_toBottomOf="@+id/textSubtitleCategory"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/text_subtitle_category"
-            app:layout_constraintTop_toTopOf="@+id/text_subtitle_category" />
+            app:layout_constraintStart_toEndOf="@+id/textSubtitleCategory"
+            app:layout_constraintTop_toTopOf="@+id/textSubtitleCategory" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="0dp"
@@ -75,7 +75,7 @@
             app:spanCount="3"
             app:listTypesPokemon="@{viemodel.listTypesPokemon}"
             tools:itemCount="5"
-            app:layout_constraintTop_toBottomOf="@+id/text_subtitle_category" />
+            app:layout_constraintTop_toBottomOf="@+id/textSubtitleCategory" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
