--- a/app/src/main/res/layout/fragment_region_pokemon.xml
+++ b/app/src/main/res/layout/fragment_region_pokemon.xml
@@ -30,7 +30,7 @@
         tools:context=".RegionPokemonFragment">
 
         <TextView
-            android:id="@+id/text_pokemon_name"
+            android:id="@+id/textPokemonName"
             style="@style/TextViewTitleBold"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -42,17 +42,17 @@
         <View
             android:id="@+id/view"
             android:layout_width="0dp"
-            android:layout_height="2dp"
+            android:layout_height="@dimen/_2sdp"
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginEnd="@dimen/_5sdp"
             android:background="@color/primary_gray"
-            app:layout_constraintBottom_toBottomOf="@+id/text_subtitle_category"
-            app:layout_constraintEnd_toStartOf="@+id/text_subtitle_category"
+            app:layout_constraintBottom_toBottomOf="@+id/textSubtitleCategory"
+            app:layout_constraintEnd_toStartOf="@+id/textSubtitleCategory"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name" />
+            app:layout_constraintTop_toBottomOf="@+id/textPokemonName" />
 
         <TextView
-            android:id="@+id/text_subtitle_category"
+            android:id="@+id/textSubtitleCategory"
             style="@style/TextViewTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -61,20 +61,20 @@
             android:text="@{subtitle}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name"
+            app:layout_constraintTop_toBottomOf="@+id/textPokemonName"
             tools:text="151 pokemon encontrados \nen esta region" />
 
 
         <View
             android:layout_width="0dp"
-            android:layout_height="2dp"
+            android:layout_height="@dimen/_2sdp"
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginEnd="@dimen/_5sdp"
             android:background="@color/primary_gray"
-            app:layout_constraintBottom_toBottomOf="@+id/text_subtitle_category"
+            app:layout_constraintBottom_toBottomOf="@+id/textSubtitleCategory"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/text_subtitle_category"
-            app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name" />
+            app:layout_constraintStart_toEndOf="@+id/textSubtitleCategory"
+            app:layout_constraintTop_toBottomOf="@+id/textPokemonName" />
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipe"
@@ -83,7 +83,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_subtitle_category"
+            app:layout_constraintTop_toBottomOf="@+id/textSubtitleCategory"
             app:onRefreshListener="@{() -> viewModel.getPokemonRegion()}"
             app:refreshing="@{viewModel.isLoading}">
 
@@ -105,7 +105,7 @@
             android:layout_gravity="end|bottom"
             android:layout_margin="@dimen/_20sdp"
             android:contentDescription="@string/app_name"
-            android:elevation="8dp"
+            android:elevation="@dimen/_8sdp"
             android:src="@drawable/ic_open_browser"
             android:visibility="@{showFabWebView ? View.VISIBLE :  View.GONE, default = visible }"
             app:backgroundTint="@color/primary_red"
