--- a/app/src/main/res/layout/fragment_type_details.xml
+++ b/app/src/main/res/layout/fragment_type_details.xml
@@ -72,7 +72,7 @@
 
                 <View
                     android:layout_width="0dp"
-                    android:layout_height="2dp"
+                    android:layout_height="@dimen/_2sdp"
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:background="@color/primary_gray"
@@ -97,7 +97,7 @@
 
                 <View
                     android:layout_width="0dp"
-                    android:layout_height="2dp"
+                    android:layout_height="@dimen/_2sdp"
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:background="@color/primary_gray"
@@ -151,7 +151,7 @@
                 <View
 
                     android:layout_width="0dp"
-                    android:layout_height="2dp"
+                    android:layout_height="@dimen/_2sdp"
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:background="@color/primary_gray"
@@ -176,7 +176,7 @@
 
                 <View
                     android:layout_width="0dp"
-                    android:layout_height="2dp"
+                    android:layout_height="@dimen/_2sdp"
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:background="@color/primary_gray"
@@ -228,7 +228,7 @@
                 <View
 
                     android:layout_width="0dp"
-                    android:layout_height="2dp"
+                    android:layout_height="@dimen/_2sdp"
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:background="@color/primary_gray"
@@ -253,7 +253,7 @@
 
                 <View
                     android:layout_width="0dp"
-                    android:layout_height="2dp"
+                    android:layout_height="@dimen/_2sdp"
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:background="@color/primary_gray"
@@ -305,7 +305,7 @@
 
                 <View
                     android:layout_width="0dp"
-                    android:layout_height="2dp"
+                    android:layout_height="@dimen/_2sdp"
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:background="@color/primary_gray"
@@ -330,7 +330,7 @@
 
                 <View
                     android:layout_width="0dp"
-                    android:layout_height="2dp"
+                    android:layout_height="@dimen/_2sdp"
                     android:layout_marginStart="@dimen/_5sdp"
                     android:layout_marginEnd="@dimen/_5sdp"
                     android:background="@color/primary_gray"
