--- a/app/src/main/res/layout/item_list_pokemon.xml
+++ b/app/src/main/res/layout/item_list_pokemon.xml
@@ -68,11 +68,11 @@
 
 
         <TextView
-            android:id="@+id/text_pokemon_name"
+            android:id="@+id/textPokemonName"
             style="@style/TextViewDescriptionPokemon"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:elevation="2dp"
+            android:elevation="@dimen/_2sdp"
             android:gravity="center"
             android:lines="2"
             android:maxLines="2"
@@ -86,17 +86,17 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:elevation="2dp"
+            android:elevation="@dimen/_2sdp"
             android:gravity="center"
             android:orientation="horizontal"
             android:weightSum="1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name">
+            app:layout_constraintTop_toBottomOf="@+id/textPokemonName">
 
             <ImageView
-                android:id="@+id/imageType1"
+                android:id="@+id/imgTypeOne"
                 android:layout_width="@dimen/_20sdp"
                 android:layout_height="@dimen/_20sdp"
                 android:layout_marginStart="@dimen/_5sdp"
