--- a/app/src/main/res/layout/item_list_regions.xml
+++ b/app/src/main/res/layout/item_list_regions.xml
@@ -57,7 +57,7 @@
             android:layout_width="@dimen/_150sdp"
             android:layout_height="@dimen/_150sdp"
             android:contentDescription="@string/app_name"
-            android:elevation="3dp"
+            android:elevation="@dimen/_3sdp"
             android:scaleType="fitCenter"
             app:layout_constraintBottom_toTopOf="@+id/guideline_50_h"
             app:layout_constraintEnd_toEndOf="parent"
@@ -82,11 +82,11 @@
 
 
         <TextView
-            android:id="@+id/text_pokemon_name"
+            android:id="@+id/textPokemonName"
             style="@style/TextViewTitleBold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:elevation="2dp"
+            android:elevation="@dimen/_2sdp"
             android:gravity="center"
             android:text="@{region.name}"
             app:layout_constraintEnd_toEndOf="parent"
@@ -101,7 +101,7 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/_5sdp"
             android:background="@drawable/background_rounded_yellow"
-            android:elevation="2dp"
+            android:elevation="@dimen/_2sdp"
             android:gravity="center"
             android:padding="@dimen/_5sdp"
             android:text="@{region.totalPokemon}"
@@ -112,14 +112,14 @@
             tools:text="151" />
 
         <TextView
-            android:id="@+id/text_subtitle_category"
+            android:id="@+id/textSubtitleCategory"
             style="@style/TextViewTitleRegions"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:text="@{region.firstMedalName}"
             app:layout_constraintEnd_toStartOf="@+id/guideline_33_v"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name"
+            app:layout_constraintTop_toBottomOf="@+id/textPokemonName"
             tools:text="Roca" />
 
         <ImageView
@@ -127,11 +127,11 @@
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
             android:contentDescription="@string/app_name"
-            android:elevation="3dp"
+            android:elevation="@dimen/_3sdp"
             android:scaleType="fitCenter"
             app:layout_constraintEnd_toStartOf="@+id/guideline_33_v"
-            app:layout_constraintStart_toStartOf="@+id/text_subtitle_category"
-            app:layout_constraintTop_toBottomOf="@+id/text_subtitle_category"
+            app:layout_constraintStart_toStartOf="@+id/textSubtitleCategory"
+            app:layout_constraintTop_toBottomOf="@+id/textSubtitleCategory"
             app:src="@{region.firstMedalImgUrl}" />
 
 
@@ -142,18 +142,18 @@
             android:text="@{region.secondMedalName}"
             app:layout_constraintEnd_toStartOf="@+id/guideline_50_v"
             app:layout_constraintStart_toStartOf="@+id/guideline_33_v"
-            app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name"
+            app:layout_constraintTop_toBottomOf="@+id/textPokemonName"
             tools:text="Cascada" />
 
         <ImageView
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
             android:contentDescription="@string/app_name"
-            android:elevation="3dp"
+            android:elevation="@dimen/_3sdp"
             android:scaleType="fitCenter"
             app:layout_constraintEnd_toStartOf="@+id/guideline_50_v"
             app:layout_constraintStart_toStartOf="@+id/guideline_33_v"
-            app:layout_constraintTop_toBottomOf="@+id/text_subtitle_category"
+            app:layout_constraintTop_toBottomOf="@+id/textSubtitleCategory"
             app:src="@{region.secondMedalImgUrl}" />
 
 
@@ -164,18 +164,18 @@
             android:text="@{region.thirdMedalName}"
             app:layout_constraintEnd_toStartOf="@+id/guideline_75_v"
             app:layout_constraintStart_toStartOf="@+id/guideline_50_v"
-            app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name"
+            app:layout_constraintTop_toBottomOf="@+id/textPokemonName"
             tools:text="Trueno" />
 
         <ImageView
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
             android:contentDescription="@string/app_name"
-            android:elevation="3dp"
+            android:elevation="@dimen/_3sdp"
             android:scaleType="fitCenter"
             app:layout_constraintEnd_toStartOf="@+id/guideline_75_v"
             app:layout_constraintStart_toStartOf="@+id/guideline_50_v"
-            app:layout_constraintTop_toBottomOf="@+id/text_subtitle_category"
+            app:layout_constraintTop_toBottomOf="@+id/textSubtitleCategory"
             app:src="@{region.thirdMedalImgUrl}" />
 
         <TextView
@@ -185,18 +185,18 @@
             android:text="@{region.forthMedalName}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline_75_v"
-            app:layout_constraintTop_toBottomOf="@+id/text_pokemon_name"
+            app:layout_constraintTop_toBottomOf="@+id/textPokemonName"
             tools:text="Arcoiris" />
 
         <ImageView
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
             android:contentDescription="@string/app_name"
-            android:elevation="3dp"
+            android:elevation="@dimen/_3sdp"
             android:scaleType="fitCenter"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline_75_v"
-            app:layout_constraintTop_toBottomOf="@+id/text_subtitle_category"
+            app:layout_constraintTop_toBottomOf="@+id/textSubtitleCategory"
             app:src="@{region.forthMedalImgUrl}" />
 
         <TextView
@@ -214,7 +214,7 @@
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
             android:contentDescription="@string/app_name"
-            android:elevation="3dp"
+            android:elevation="@dimen/_3sdp"
             android:scaleType="fitCenter"
             app:layout_constraintEnd_toStartOf="@+id/guideline_33_v"
             app:layout_constraintStart_toStartOf="parent"
@@ -235,7 +235,7 @@
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
             android:contentDescription="@string/app_name"
-            android:elevation="3dp"
+            android:elevation="@dimen/_3sdp"
             android:scaleType="fitCenter"
             app:layout_constraintEnd_toStartOf="@+id/guideline_50_v"
             app:layout_constraintStart_toStartOf="@+id/guideline_33_v"
@@ -257,7 +257,7 @@
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
             android:contentDescription="@string/app_name"
-            android:elevation="3dp"
+            android:elevation="@dimen/_3sdp"
             android:scaleType="fitCenter"
             app:layout_constraintEnd_toStartOf="@+id/guideline_75_v"
             app:layout_constraintStart_toStartOf="@+id/guideline_50_v"
@@ -278,7 +278,7 @@
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
             android:contentDescription="@string/app_name"
-            android:elevation="3dp"
+            android:elevation="@dimen/_3sdp"
             android:scaleType="fitCenter"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline_75_v"
