--- a/app/src/main/res/layout/fragment_region_home.xml
+++ b/app/src/main/res/layout/fragment_region_home.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/purple_700"
+        android:animateLayoutChanges="true"
         tools:context=".PokemonFragment">
 
         <TextView
@@ -71,6 +72,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_14sdp"
+            android:layout_marginEnd="@dimen/_14sdp"
             android:gravity="center"
             app:boxBackgroundColor="@android:color/transparent"
             app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
@@ -81,11 +83,10 @@
             app:boxStrokeWidthFocused="0dp"
             app:endIconMode="clear_text"
             app:hintEnabled="true"
-            app:layout_constraintEnd_toStartOf="@+id/btn_search"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textSubtitleCategory"
             app:startIconDrawable="@drawable/ic_search">
-
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etSearch"
@@ -99,20 +100,20 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <ImageView
-            android:id="@+id/btn_search"
-            style="@style/ButtonRippleNormal"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:layout_margin="@dimen/_5sdp"
-            android:contentDescription="@string/app_name"
-            android:src="@drawable/ic_arrow_right"
-            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
+        <ListView
+            android:id="@+id/listResults"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_14sdp"
+            android:background="@drawable/background_rounded_white"
+            android:choiceMode="singleChoice"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textSubtitleCategory"
-            app:tint="@color/primary_gray" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/regionResults"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
